# FGS.rs

./: Cargo.toml  README.md
src/: backtrack.rs  hmm.rs  main.rs  matrix.rs  nucleotide.rs  output_entry.rs  run.rs  train.rs  util.rs  viterbi.rs
