[package]
name = "compbio"
version = "0.1.0"
authors = ["ndossche <niels.dossche@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1 # Kwestie dat het toch een beetje vooruit gaat...

[profile.release]
panic = "abort"
opt-level = 3

[dependencies]
bio = "0.30"
structopt = "0.3.14"
rayon = "1.3"
strum = "0.18.0"
strum_macros = "0.18.0"
